style-FINISHED.css
/* @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap'); */
*, *:before, *:after {
  box-sizing: border-box;
  max-width: 100%;
  margin: 0;
  /* font-family: 'Roboto', sans-serif; */

  /* padding: 0 */
}
html{
  font-size: 18px;

}

:root{
  --p: black;
  --s: #fe7f2d;
}
main{
  display: flex;
  align-items: center;
  justify-content: space-between;
}




img{
  max-width: 100%;
}

body{
  width: 100%;
 
}




/* header {
  text-align: center;
  height: 2rem;
  display: flex;
  align-items: center;
  justify-content: center;
} */

h1 {
  color: white;
  font-size: 7vw;
  text-shadow: 3px 4px 0 rgba(0,0,0,0.2);
}



nav {
  background: black;
  top: 0;
  width: 100%;
  transition:all 0.5s;
  position: relative;
  z-index: 1;
  display: flex;
  justify-content:  space-between!important;
  align-items: center;
  width: 100%;
  
}






nav a {
  text-decoration: none;
  display: inline-block;
  color: white;
  transition: all 0.2s;
  text-transform: uppercase;
}

#menus {
  display:flex;
  padding: 1rem 2rem;;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  max-width: 1200px;
  margin: 0 auto;

}
.logo a{
  font-size: 1.8rem !important;
  /* color: red */

}

.menu-icon{
  color: white!important;
}
#menus li{
  list-style: none;
  color: white;
  text-transform: uppercase;
  cursor: pointer;
  transition: all 0.3s;
}


#menus li:hover{
  transform: scale(1.1);
  color: var(--s);
  transition: all 0.3s;
}
#menus li:active{
  transform: scale(0.98);
  transition: all 0.3s;
}



/* footer */
.footer{
  width: 100%;

  display: flex;
 flex-direction: column;
 justify-content:center;
 align-items: center;

  background: rgba(0, 0, 0, 0.7);
  color: white;
  text-align: center;

  padding: 2rem;
}

.footer-menu{
  display: flex;
  list-style: none;
  gap: 1rem;
  margin: 1rem;
  justify-content:center;
  padding: 1rem;
  font-size: 1.3rem;

}

.footer-menu a {
  /* text-decoration: none; */
  color: white;
}

.footer-menu a:hover{
  color: var(--s)
}



/* images */

.images-carousel{
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 1rem;
}



/* questions qrapper */

.site-wrap,.results-wrapper, .question-wrapper, .start-wrapper, .about-wrap{
  width: 100%;
  margin: 10px auto;
  background: white;
  padding: 10px;
  border-radius: 0.5rem;
  text-align: center;
  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.05);
  transform: scale(0.98);
  transition: transform 0.5s;
  max-width:1200px;

}


/* loader */
.loading {
  width: 2rem;
  height: 2rem;
  border: 5px solid #f3f3f3;
  border-top: 6px solid var(--s);
  border-radius: 100%;
  margin: auto;
  animation: spin 1s infinite linear;
}

@keyframes spin {
  from {
      transform: rotate(0deg);
  }
  to {
      transform: rotate(360deg);
  }
}


/* whatsapp */

.wa-share{
  color: white;font-weight: bold;

  display: flex;
  flex-direction: column;
  justify-content:center;
  align-items:center;
  font-size: 2rem;
  gap: 1rem;
  width: 100%;
  max-width: 500px;
  margin: 0 auto;

}

.wa-share svg{
width: 55px
}


.facebook, .whatsapp{
  text-decoration: none;
  color: black;
  display: flex;
  justify-content:center;
  align-items:center;
  font-size: 1rem;
  gap: 10px;

  padding: 1rem ;

  width: 100%;

}

.wa-share .whatsapp{
  background: #24CC62;

}
.wa-share .facebook{
  text-decoration: none;
  background: #4b74db;

}


.wa-share a{
  border-radius: 10px;
}

.nextBTN{
  padding: 0.5rem 2rem;
  font-size: 1.5rem;
}

.btn-primary{
  padding: 1rem 2rem;
  background: black;
  color: var(--s);
  font-size: 1.3rem;
  border-radius: 10px;
}

.left,.right{
  width: 250px;height: 250px;
  background: black;
  color: white;
  display: flex;
  align-items:center;
  justify-content:center
}

.site-wrap{
  display: grid;
  grid-template-columns: repeat(2,1fr);
  grid-auto-rows: 1fr;
  place-items:center;
  
  gap: 2rem;
}

.site-wrap > * {
  max-width: 500px
}


/* questionContainer */

h2{
  color: var(--s);
  text-align: center;
  margin: 1.5rem;
  font-size: 2.5rem;

}

.questionContainer  {
  max-width: 500px;
  margin: 1rem auto;
  background:rgba(0, 0, 0, 0.05);
  padding: 1rem;

  border-radius: 5px;

  display: flex;
  flex-direction: column;
  justify-content:center;
  /* align-items:center; */
  gap: 1rem;
}
.questionContainer h3 {
  text-align: left;
}

.answer-container {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 1rem;
  font-size: 1.3rem;
  color: var(--s)
}
.answer-container > * {
  cursor: pointer;
}


button{
  color: var(--s);
  background:rgba(0, 0, 0, 0.7);
  border: none;
  border-radius: 1rem;
  cursor: pointer;
  padding: 1rem;
}
button:disabled{
  color: rgb(234, 233, 233) !important;
  opacity: .5;
  background: gray !important
}

.share-title{
  color: var(--s);
  margin: 0.5rem;
  font-size: 1.1rem !important;
}
.share-description{
  margin: 0.2rem;
}


/* ul secondary */

ul .secondary{
  /* display: none; */
  display: flex;

}
ul .secondary li {
  margin: 1rem;
}

.share-container{
  margin-top: 0.5rem;
  border: 3px dashed green;
  padding: 0.5rem;
  text-align: center;
}

.ad-container{
  margin: 0 auto;
  width: 100%;
  max-width: 1200px;
  text-align: center;
  height: auto !important;
}

.disease-container{
  border: 1px solid var(--s);
  border-radius: 10px;
  padding: 0.5rem;
}





@media screen and (max-width: 728px) {
  h2{
    font-size: 1.5rem !important;
    margin: 0.8rem !important;
  }
  
 
  .site-wrap{
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;

  }

  ul .secondary{
    /* display: none; */
    position: absolute;
    background: var(--s);
    top: 4rem;
    right: 0;
    padding: 1rem;
    text-align: right;
    display: block
  }
  ul .secondary li {
    margin: 0.5rem;
  }

  .offEl{
    display: none !important;
  }

  .footer-menu{
    flex-direction: column;
    padding: 0.5rem;
    font-size: 1rem;
  
  }
  
}


@media screen and (min-width: 728px) {
  .menu-icon{
    display: none;
  }


}

